--- a/src/components/UI/select.pug
+++ b/src/components/UI/select.pug
@@ -1,10 +1,10 @@
 //-
     Items = [
-        {id: 1, value: value}
+        {id: f1, value: value}
     ]
 
-mixin select(items, name)
-    div.select-list(data-spoiler='true')
+mixin select(items, name, className)
+    div.select-list(data-spoiler='true', class=className)
         .select-list__area
             span= items[0].value
             div.select-list__arrow
