--- a/src/styles/assets/mixins.sass
+++ b/src/styles/assets/mixins.sass
@@ -1,21 +1,40 @@
 @import "functions"
 
 
-@mixin absolutePosition($l: 0, $t: 0)
+@mixin useAbsolutePosition($l: 0, $t: 0)
   position: absolute
   left: $l
   top: $t
 
 
-@mixin setFontsForTitle($size, $color: var(--textColor), $lh: 1.3, $lt: -1)
+@mixin setFontsForTitle($size, $color: var(--textColor), $lh: 1.3, $lt: -1, $fw: 700)
   letter-spacing: em($lt, $size)
   line-height: $lh
   font-size: em($size, 16)
-  font-weight: 700
+  font-weight: $fw
   color: $color
 
 
 @mixin useSecondFont($fw)
-  font-family: Commissioner
+  font-family: Commissioner, sans-serif
   @if ($fw)
     font-weight: $fw
+
+
+@mixin useBorder()
+  border: 1px solid var(--staticBorderColor)
+
+  &:hover
+    border-color: var(--hoverBorderColor)
+
+
+@mixin useHighlighting()
+  border: 1px solid var(--highlightingBorderColor)
+  box-shadow: -1px -1px 4px var(--highlightingShadowColor), 2px 2px 4px var(--highlightingShadowColor)
+
+
+@mixin useTextSecondFont()
+  font-size: em(14, 16)
+  letter-spacing: em(-0.2, 14)
+  line-height: 1.1
+  @include useSecondFont(500)
