--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,7 +1,7 @@
 @import "assets/reset"
 @import "assets/fonts"
 
-@import "themes/index"
+@import "themes/default"
 
 @import "assets/vars"
 @import "assets/functions"
@@ -14,11 +14,15 @@
 // UI modules
 @import "modules/UI/spoilers"
 @import "modules/UI/select"
-
+@import "modules/UI/switch"
+@import "modules/UI/checkbox"
+@import "modules/UI/radioBox"
+@import "modules/UI/input"
+@import "modules/UI/buttons"
 
 html
   font-size: 16px
-  font-family: Mont
+  font-family: Mont, sans-serif
   font-weight: 600
   color: var(--textColor)
 
@@ -81,7 +85,7 @@ ul.list
     &:before
       content: ''
       background: url("../img/arrow-right.svg") 0 0 / 100% 100% no-repeat
-      @include absolutePosition()
+      @include useAbsolutePosition()
       width: em(24, 16)
       height: em(24, 16)
 
@@ -95,5 +99,27 @@ ol.list
 
     &:before
       content: counter(numberItem)
-      @include absolutePosition(em(8, 16))
+      @include useAbsolutePosition(em(8, 16))
       font-weight: 700
+
+
+.label
+  @include useTextSecondFont()
+  color: var(--labelColor)
+
+
+.weakText
+  @include useTextSecondFont()
+  color: var(--weakTextColor)
+
+
+.smallTitle
+  @include setFontsForTitle(14, var(--textColor), 1.3, -0.4, 800)
+
+
+.mt-step
+  margin-top: $step
+
+
+.w-100
+  width: 100%
