--- a/src/styles/modules/UI/select.sass
+++ b/src/styles/modules/UI/select.sass
@@ -1,19 +1,17 @@
 @import "../../assets/mixins"
 @import "../../assets/functions"
+@import "../../assets/vars"
 
 
 .select-list
   background: #fff
-  border: 1px solid var(--staticSelectBorderColor)
   border-radius: 8px
   @include useSecondFont(500)
   font-size: em(14, 16)
   letter-spacing: em(-0.2, 16)
   line-height: 1.1
-  transition: .3s border-color
-
-  &:hover
-    border-color: var(--hoverSelectBorderColor)
+  transition: $defaultTransitionDuration border-color
+  @include useBorder()
 
   &.active
     border-color: var(--activeSelectBorderColor)
@@ -28,7 +26,7 @@
     display: flex
     justify-content: space-between
     cursor: pointer
-    padding: em(16, 14) em(18, 14) em(16, 14) em(16, 14)
+    padding: 1em em(18, 14) 1em 1em
     align-items: center
 
 
@@ -55,12 +53,16 @@
 
     label
       background: #ffffff
-      padding: em(16, 14) em(18, 14) em(16, 14) em(16, 14)
+      padding: em(18, 14) em(18, 14) em(18, 14) 1em
       cursor: pointer
-      transition: .5s all
+      transition: .4s all
       display: flex
       justify-content: space-between
       align-items: center
+
+      &:hover
+        background: var(--checkedSelectItemBackground)
+        color: #fff
 
       &:after
         content: ''
