--- a/src/styles/modules/UI/checkbox.sass
+++ b/src/styles/modules/UI/checkbox.sass
@@ -26,7 +26,7 @@
     height: em(18, 14)
     position: relative
     background: var(--checkboxColor)
-    border-radius: 2px
+    border-radius: em(2, 14)
     transition: .25s background-color
 
     &:after
