--- a/src/styles/modules/UI/input.sass
+++ b/src/styles/modules/UI/input.sass
@@ -19,7 +19,7 @@
     height: 100%
     padding: em(13, 14)
     transition: $defaultTransitionDuration all
-    border-radius: 8px
+    border-radius: em(8, 14)
     @include useBorder()
     @include useSecondFont(500)
     line-height: 1.1
