--- a/src/styles/modules/UI/buttons.sass
+++ b/src/styles/modules/UI/buttons.sass
@@ -6,7 +6,7 @@
   padding: em(15, 14)
   letter-spacing: em(-0.4, 14)
   line-height: 1.3
-  border-radius: 4px
+  border-radius: em(4, 16)
   transition: $defaultTransitionDuration all
   font-weight: 800
 
