--- a/src/styles/modules/UI/select.sass
+++ b/src/styles/modules/UI/select.sass
@@ -5,7 +5,7 @@
 
 .select-list
   background: #fff
-  border-radius: 8px
+  border-radius: em(8, 14)
   @include useSecondFont(500)
   font-size: em(14, 16)
   letter-spacing: em(-0.2, 16)
@@ -15,7 +15,7 @@
 
   &.active
     border-color: var(--activeSelectBorderColor)
-    box-shadow: 0 0 60px rgba(0, 0, 0, 0.05), 0 0 7.51293px rgba(0, 0, 0, 0.1)
+    box-shadow: 0 0 em(60, 14) rgba(0, 0, 0, 0.05), 0 0 em(7.51293, 16) rgba(0, 0, 0, 0.1)
 
     .select-list__arrow
       transform: scaleY(-1)
