--- a/src/styles/assets/mixins.sass
+++ b/src/styles/assets/mixins.sass
@@ -7,7 +7,7 @@
   top: $t
 
 
-@mixin setFontsForTitle($size, $color: var(--textColor), $lh: 1.3, $lt: -1, $fw: 700)
+@mixin setFonts($size, $color: var(--textColor), $lh: 1.3, $lt: -1, $fw: 700)
   letter-spacing: em($lt, $size)
   line-height: $lh
   font-size: em($size, 16)
