--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,6 +6,8 @@
 @import "assets/vars"
 @import "assets/functions"
 @import "assets/mixins"
+@import "assets/basic"
+
 
 // main modules
 @import "modules/header"
@@ -20,11 +22,18 @@
 @import "modules/UI/input"
 @import "modules/UI/buttons"
 
+// Parts
+@import "modules/parts/logo"
+
+
 html
   font-size: 16px
   font-family: Mont, sans-serif
   font-weight: 600
   color: var(--textColor)
+
+  @media screen and (max-width: 480px)
+    font-size: 3.333vw
 
 
 body
@@ -37,22 +46,24 @@ body
   max-width: 1440px
   padding: 0 25px
   margin: 0 auto
+  @media screen and (max-width: $mobileResponse)
+    padding: 0 15px
 
 
 h1
-  @include setFontsForTitle(48)
+  @include setFonts(48)
 
 
 h2
-  @include setFontsForTitle(36, var(--h2Color))
+  @include setFonts(36, var(--h2Color))
 
 
 h3
-  @include setFontsForTitle(24)
+  @include setFonts(24)
 
 
 h4
-  @include setFontsForTitle(18, var(--textColor), 1.5, -0.4)
+  @include setFonts(18, var(--textColor), 1.5, -0.4)
 
 
 p
@@ -114,7 +125,7 @@ ol.list
 
 
 .smallTitle
-  @include setFontsForTitle(14, var(--textColor), 1.3, -0.4, 800)
+  @include setFonts(14, var(--textColor), 1.3, -0.4, 800)
 
 
 .mt-step
@@ -123,3 +134,42 @@ ol.list
 
 .w-100
   width: 100%
+
+
+.theme-switcher
+  cursor: pointer
+  display: flex
+  align-items: center
+
+  .eyeIcon
+    fill: var(--weakTextColor)
+    width: em(20, 12)
+    height: em(18, 12)
+    margin-right: em(6, 12)
+    display: inline-block
+
+
+.link
+  @include setFonts(14, var(--textColor), 1.3, -0.4)
+  transition: $defaultTransitionDuration color
+
+  &:hover
+    color: var(--textHoverColor)
+
+
+.pairWords
+  display: flex
+
+  .weakText
+    font-size: em(10, 16)
+
+    &:not(:last-child)
+      &:after
+        content: ''
+        width: .5em
+        height: .5em
+        border-radius: 50%
+        background: var(--superGrey)
+        display: inline-block
+        margin: 0 .5em
+        vertical-align: middle
