--- a/src/styles/modules/header.sass
+++ b/src/styles/modules/header.sass
@@ -1,4 +1,205 @@
 @import '../assets/functions'
+@import '../assets/mixins'
+@import '../assets/vars'
 
-header
-  background: red
+$headerFirstResponse: 1000px
+$headerSecondResponse: 600px
+
+.header
+  font-size: 1rem
+
+  &__rest
+    display: flex
+    justify-content: space-between
+    padding: .5em 0 em(5, 16)
+    align-items: center
+
+    .weakText
+      font-size: em(12, 16)
+      letter-spacing: em(-0.2, 12)
+
+  &__content
+    padding: 1em 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    position: relative
+    min-width: max-content
+
+    @media screen and (max-width: $headerSecondResponse)
+      padding: em(12.5, 16) 0
+
+    &:before, &:after
+      content: ''
+      position: absolute
+      top: 0
+      left: calc( -1 * ((100vw - 100%) / 2))
+      background: var(--headerBorderColor)
+      height: 1px
+      width: 100vw
+
+      @media screen and (max-width: $headerFirstResponse)
+        left: 0
+        width: 100%
+
+
+    &:after
+      top: 100%
+
+  &__mainBlock
+    display: flex
+    align-items: center
+
+    @media screen and (max-width: $headerFirstResponse)
+      justify-content: space-between
+      width: 100%
+
+  &__menu
+    margin-left: em(30, 16)
+    display: flex
+    align-items: center
+    margin-right: 1rem
+    gap: rem(20)
+
+    & > ul
+      display: flex
+      gap: rem(20)
+
+      @media screen and (max-width: $headerFirstResponse)
+        gap: rem(10)
+
+      li
+        white-space: nowrap
+
+    @media screen and (max-width: $headerFirstResponse)
+      margin: 0 0 0 rem(145)
+      gap: rem(10)
+
+  &__contacts
+    display: flex
+    gap: rem(20)
+    align-items: center
+    flex-shrink: 0
+    margin-left: 1rem
+
+    @media screen and (max-width: $headerFirstResponse)
+      justify-content: center
+      margin: rem(12) 0 0 0
+      flex-shrink: 1
+
+    @media screen and (max-width: $headerSecondResponse)
+      font-size: rem(12)
+
+      .button
+        padding: em(5, 12)
+
+  &__telContainer
+
+    .weakText
+      letter-spacing: em(-0.4, 16)
+
+  &__tel
+    transition: $defaultTransitionDuration all
+    @include setFonts(20, var(--textColor), lh(26, 20), -0.4)
+    &:hover
+      color: var(--textHoverColor)
+
+  &__socials
+    display: flex
+    gap: rem(20)
+
+    @media screen and (max-width: $headerSecondResponse)
+      gap: rem(10)
+
+  &__social
+    display: block
+    width: em(36, 16)
+    height: em(36, 16)
+
+    @media screen and (max-width: $headerSecondResponse)
+      width: 2em
+      height: 2em
+
+  &__burgerWrapper
+    position: relative
+
+  &__burgerMenu
+    padding: rem(10)
+    display: flex
+    align-items: center
+    background: var(--greyBackground)
+    border-radius: rem(5)
+    cursor: pointer
+    position: relative
+
+    & > .link
+      line-height: 1
+
+      @media screen and (max-width: $headerSecondResponse)
+        font-size: em(12, 16)
+
+    &:hover
+
+      & > .link
+        color: var(--textHoverColor)
+
+      .header__burger
+        &:before, span, &:after
+          background: var(--textHoverColor)
+
+    &.active .header__burger
+
+      span
+        transform: scaleX(0)
+
+      &:before
+        top: 50%
+        transform: translateY(-50%) rotate(45deg)
+
+      &:after
+        transform: translateY(-50%) rotate(-45deg)
+
+  &__burger
+    margin-right: .5em
+    width: em(18, 16)
+    height: em(18, 16)
+    position: relative
+
+    &:before, &:after, span
+      height: 2px
+      background: #000
+      position: absolute
+      transition: $defaultTransitionDuration all
+
+    span
+      bottom: em(2.25, 16)
+      width: em(8.25, 16)
+      transform-origin: left center
+
+    &:before, &:after
+      width: em(13.5, 16)
+      content: ''
+
+    &:before
+      top: em(2.25, 16)
+
+    &:after
+      top: 50%
+      transform: translateY(-50%)
+
+  &__burgerList
+    @include useAbsolutePosition(50%, 110%)
+    z-index: 100
+    transition: $defaultTransitionDuration all
+    transform-origin: center center
+    transform: translateX(-50%) scaleY(0)
+    background: var(--greyBackground)
+    border-radius: rem(5)
+
+    &.active
+      transform: translateX(-50%) scaleY(1)
+
+    li .link
+      padding: rem(10)
+      display: block
+      cursor: pointer
