--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -1,7 +1,13 @@
 \:root
   --textColor: #212540
+  --textHoverColor: #0074FF
   --h2Color: #141D2C
   --pColor: #323232
+
+  --superGrey: #D9D9D9
+  --headerBorderColor: #E5E8EC
+
+  --greyBackground: #EFF1F8
 
   --liColor: #161717
 
