--- a/src/layouts/modules/parts/logo.pug
+++ b/src/layouts/modules/parts/logo.pug
@@ -1,4 +1,4 @@
-a.logo(href='/')
+a.logo(href='/', class= logoResize ? 'resize' : '')
     .logo__img
         img(src="@img/logo.png")
     .logo__textBlock
