--- a/src/layouts/template.pug
+++ b/src/layouts/template.pug
@@ -14,3 +14,4 @@ html(lang='en')
             .container
                 block content
         include modules/footer
+        script(src="scripts/main.min.js")
