--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -4,8 +4,11 @@
   --h2Color: #141D2C
   --pColor: #323232
 
+  --footerRestBlockColor: #141D2C
+  --footerLinkColor: #0074FF
+
   --superGrey: #D9D9D9
-  --headerBorderColor: #E5E8EC
+  --lineBorderColor: #E5E8EC
 
   --greyBackground: #EFF1F8
 
