--- a/src/layouts/modules/main/footer.pug
+++ b/src/layouts/modules/main/footer.pug
@@ -5,7 +5,7 @@ footer
         .footer
             .footer__content
                 .footer__block.footer__contacts
-                    include parts/logo
+                    include ../parts/logo
                     div.footer__links
                         a.footer__link(href="#") г. Оренбург, ул. Чкалова, 43/1
                         a.footer__link(href="tel:12345678") +7 (3532) 43-20-73
