--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -1,4 +1,4 @@
-include ../../components/UI/usualButton
+include ../../../components/UI/usualButton
 
 - var logoResize = true;
 
@@ -13,7 +13,7 @@ header
                     | Версия для слабовидящих
             .header__content
                 .header__mainBlock
-                    include parts/logo
+                    include ../parts/logo
                     nav.header__menu
                         ul
                             li
