--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -53,3 +53,5 @@
   --hoverUsualButtonBackground: rgba(0, 116, 255, 0.55)
   --activeUsualButtonBackground: #212540
 
+  --greyBannerBackground: #EFF1F8
+
