Blue banner is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,8 @@
 extends layouts/template
 
 block variables
-    - var pageTitle = 'test'
-
+    - var pageTitle = 'Главная'
 
 block content
-    include layouts/modules/parts/bigBannerWithImage
-
+    include layouts/modules/parts/bigBannerGrey
+    include layouts/modules/parts/bigBannerBlue
