--- a/src/layouts/modules/parts/bigBannerGrey.pug
+++ b/src/layouts/modules/parts/bigBannerGrey.pug
@@ -2,7 +2,7 @@ include ../../../components/UI/usualButton
 
 section
     .container
-        .banner
+        .banner.banner--complex-image
             .banner__info
                 .banner__subtitle МДОАУ
                 .banner__title Детский сад №73
