--- a/src/styles/modules/UI/buttons.sass
+++ b/src/styles/modules/UI/buttons.sass
@@ -31,7 +31,7 @@
   &--dashed
     border: 1px dashed rgba(0, 116, 255, 0.55)
     color: var(--dashedButtonTextColor)
-    background: #fff
+    background: transparent
 
     &:hover
       color: var(--hoverDashedButtonTextColor)
@@ -65,7 +65,7 @@
   &--white
     color: var(--usualButtonBackground)
     border: 1px solid var(--usualButtonBackground)
-    background: #fff
+    background: transparent
 
     .icon
       fill: var(--usualButtonBackground)
