--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -54,4 +54,7 @@
   --activeUsualButtonBackground: #212540
 
   --greyBannerBackground: #EFF1F8
+  --blueBannerBackground: #0074FF
+
+  --blueBannerSubtitleColor: #FFD2C0
 
