Blue banner is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,4 @@ block variables
 block content
     include layouts/modules/parts/bigBannerGrey
     include layouts/modules/parts/bigBannerBlue
+    include layouts/modules/parts/smallBanner
