--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -26,6 +26,7 @@
 @import "modules/parts/logo"
 @import "modules/parts/banner"
 @import "modules/parts/videoSign"
+@import "modules/parts/smBanner"
 
 
 html
