--- a/src/index.pug
+++ b/src/index.pug
@@ -7,3 +7,4 @@ block content
     include layouts/modules/parts/bigBannerGrey
     include layouts/modules/parts/bigBannerBlue
     include layouts/modules/parts/smallBanner
+    include layouts/modules/parts/features
