News block is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,3 +8,4 @@ block content
     include layouts/modules/parts/bigBannerBlue
     include layouts/modules/parts/smallBanner
     include layouts/modules/parts/features
+    include layouts/modules/parts/news
