--- a/src/styles/modules/parts/features.sass
+++ b/src/styles/modules/parts/features.sass
@@ -8,6 +8,7 @@ $featuresSecondResponse: 700px
   display: flex
   gap: em(24, 16)
   font-size: 1rem
+  justify-content: space-between
 
   @media screen and (max-width: $featuresTextFirstResponse)
     font-size: 1.1vw
