--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -28,6 +28,7 @@
 @import "modules/parts/videoSign"
 @import "modules/parts/smBanner"
 @import "modules/parts/features"
+@import "modules/parts/news"
 
 
 html
@@ -65,7 +66,7 @@ h1
 
 
 h2
-  @include setFonts(36, var(--h2Color))
+  @include setFonts(36, var(--h2Color), 1.2)
 
   .icon
     width: em(40, 36)
@@ -141,6 +142,13 @@ ol.list
   color: var(--weakTextColor)
 
 
+.tinyText
+  color: var(--weakTextColor)
+  @include useSecondFont(500)
+  font-size: em(12, 16)
+  line-height: 1.8
+  letter-spacing: em(-0.2, 16)
+
 .smallTitle
   @include setFonts(14, var(--textColor), 1.3, -0.4, 800)
 
@@ -202,3 +210,4 @@ section
 
     @media screen and (max-width: $tablet)
       margin-bottom: rem(24)
+
