Groups block is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,3 +9,4 @@ block content
     include layouts/modules/parts/smallBanner
     include layouts/modules/parts/features
     include layouts/modules/parts/news
+    include layouts/modules/parts/groups
