--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -29,6 +29,7 @@
 @import "modules/parts/smBanner"
 @import "modules/parts/features"
 @import "modules/parts/news"
+@import "modules/parts/groups"
 
 
 html
