Items of groups block and news block are refers now

--- a/src/layouts/modules/parts/groups.pug
+++ b/src/layouts/modules/parts/groups.pug
@@ -8,7 +8,7 @@ section
         .groups
             while index < 8
                 - index++
-                .groups__item
+                a.groups__item(href='#')
                     .groups__img
                         img(src="@img/temporary/groups-1.png")
                     .groups__info
