--- a/src/layouts/modules/parts/news.pug
+++ b/src/layouts/modules/parts/news.pug
@@ -6,25 +6,25 @@ section
     .container
         +h2WithIcon("@img/news.svg", 'Наши новости')
         .news
-            .news__item
+            a.news__item(href="#")
                 .news__img
                     img(src="@img/temporary/news-1.png")
                 .news__info
                     .news__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение. Но чтобы вы поняли, откуда возникает это превратное
                     .tinyText 20 января 2023
-            .news__item
+            a.news__item(href="#")
                 .news__img
                     img(src="@img/temporary/news-2.png")
                 .news__info
                     .news__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение.
                     .tinyText 20 января 2023
-            .news__item
+            a.news__item(href="#")
                 .news__img
                     img(src="@img/temporary/news-3.png")
                 .news__info
                     .news__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение.
                     .tinyText 20 января 2023
-            .news__item
+            a.news__item(href="#")
                 .news__img
                     img(src="@img/temporary/news-4.png")
                 .news__info
