--- a/src/styles/modules/parts/groups.sass
+++ b/src/styles/modules/parts/groups.sass
@@ -1,4 +1,5 @@
 @import "../../assets/mixins"
+@import "../../assets/vars"
 
 $groupsFirstResponse: 700px
 
@@ -20,6 +21,14 @@ $groupsFirstResponse: 700px
     border-radius: em(15, 16)
     flex: 1 0 em(320, 16)
     color: var(--groupColor)
+    transition: $defaultTransitionDuration all
+
+    &:hover
+      background: var(--groupHoverBackground)
+      color: #fff
+
+    &:active
+      transform: scale(0.98)
 
   &__title
     font-size: em(17, 16)
