--- a/src/index.pug
+++ b/src/index.pug
@@ -10,3 +10,4 @@ block content
     include layouts/modules/parts/features
     include layouts/modules/parts/news
     include layouts/modules/parts/groups
+    include layouts/modules/parts/collective
